--- a/Index.html
+++ b/Index.html
@@ -268,7 +268,7 @@
                                 <h2>900+</h2>
                             </div>
 
-                            <div class="content-text">
+                            <div class="content-text" class="more">
                                 <h3>Teachers Involve in Us</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta eveniet 
                                     dolorum atque quam? Ipsum recusandae accusantium perferendis corporis
@@ -282,7 +282,7 @@
                             </div>
 
                             <div class="content-text">
-                                <h3>Teachers Involve in Us</h3>
+                                <h3>High Quality Course</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta eveniet 
                                     dolorum atque quam? Ipsum recusandae accusantium perferendis corporis
                                     nesciunt amet dolorem itaque eligendi dolorum illum.</p>
@@ -294,8 +294,8 @@
                                 <h2>600+</h2>
                             </div>
 
-                            <div class="content-text">
-                                <h3>Teachers Involve in Us</h3>
+                            <div class="content-text" class="more">
+                                <h3>Active Free Course</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta eveniet 
                                     dolorum atque quam? Ipsum recusandae accusantium perferendis corporis
                                     nesciunt amet dolorem itaque eligendi dolorum illum.</p>
@@ -315,6 +315,48 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="footer">
+            <div class="footer-container">
+                <div class="footer-content-container">
+
+                    <div class="links">
+                        <h1>HavTont</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi amet eos perspiciatis doloremque neque? Nemo nesciunt eius illo quibusdam aliquid iure repellat! Itaque ipsam velit, sunt reprehenderit ea tempora. Maiores?</p>
+
+                        <div class="social-handles">
+                            <h3>Follow Us On</h3>
+                            <div class="social-icons">
+                                <p>😎</p>
+                                <!-- <div class="fa-regular fa-facebook"> </div> -->
+                                <p>😎</p>
+                                <p>😎</p>
+                                <p>😎</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="useful-links">
+                        <h3>Useful Links</h3>
+                        <div class="the-links">
+                            <a href="#">About Us</a>
+                            <a href="#">Courses</a>
+                            <a href="#">categories</a>
+                            <a href="#">News & Blogs</a>
+                            <a href="#">Contact</a>
+                            <a href="#">Terms & Service</a>
+                            <a href="#">Sign Up</a>
+                            <a href="#">Sign in</a>
+                            <a href="#">Testimonial</a>
+                            <a href="#">FAQ</a>
+                            <a href="#">Privacy & Policy</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="js/havtent.js"></script>
 </body>
