--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    
+
     <link rel="stylesheet" href="css/havtent.css">
     <link rel="stylesheet" href="css/course.css">
     <title>HavTent Uni.</title>
@@ -326,7 +328,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi amet eos perspiciatis doloremque neque? Nemo nesciunt eius illo quibusdam aliquid iure repellat! Itaque ipsam velit, sunt reprehenderit ea tempora. Maiores?</p>
 
                         <div class="social-handles">
-                            <h3>Follow Us On</h3>
+                            <h3>Follow Us</h3>
                             <div class="social-icons">
                                 <p>😎</p>
                                 <!-- <div class="fa-regular fa-facebook"> </div> -->
