--- a/Index.html
+++ b/Index.html
@@ -7,11 +7,12 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <link rel="icon" type="image/x-icon" href="images/logo.jpg">
     
 
     <link rel="stylesheet" href="css/havtent.css">
     <link rel="stylesheet" href="css/course.css">
-    <title>HavTent Uni.</title>
+    <title>HavTont</title>
 </head>
 <body>
     <header>
@@ -55,7 +56,7 @@
             <div class="about-us">
                 <img src="images/image12.jpeg" alt="school owner">
                 <div class="holder"></div>
-                <div class="info">
+                <div class="info" class="scroll-content">
                 <h2>What to know about..</h2>
 
                 <br>
@@ -117,7 +118,7 @@
         <div class="courses-section">
             <div class="course-container">
                 <div class="course-contents">
-                    <div class="course-head">
+                    <div class="course-head" class="scroll-content">
                         <div class="Heading">
                         <h2>Browse courses by categories</h2>
                         <p>
@@ -260,7 +261,7 @@
             <div class="admission-container">
                 <div class="container">
                     <div class="ad-content">
-                        <div class="flex">
+                        <div class="flex" class="scroll-content">
                         <div class="heading">
                             <h1>Enhance Your Skills With Best Online Causes</h1>
                         </div>
@@ -330,11 +331,10 @@
                         <div class="social-handles">
                             <h3>Follow Us</h3>
                             <div class="social-icons">
-                                <p>😎</p>
-                                <!-- <div class="fa-regular fa-facebook"> </div> -->
-                                <p>😎</p>
-                                <p>😎</p>
-                                <p>😎</p>
+                                <a><i class="fa-brands fa-facebook"></i></a>
+                                <a><i class="fa-brands fa-twitter"></i></a>
+                                <a><i class="fa-brands fa-linkedin"></i></a>
+                                <a><i class="fa-brands fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -353,6 +353,15 @@
                             <a href="#">Testimonial</a>
                             <a href="#">FAQ</a>
                             <a href="#">Privacy & Policy</a>
+                        </div>
+                    </div>
+
+                    <div class="inTouch">
+                        <h3>Get In Touch</h3>
+                        <div class="reachables">
+                            <p>+234 0907 388 7755</p>
+                            <p>havtontonline@gmail.com</p>
+                            <p>839 Block O, Space street, Mars.</p>
                         </div>
                     </div>
                 </div>
