--- a/Index.html
+++ b/Index.html
@@ -44,8 +44,9 @@
                    <h1>Education can be started at Any Age</h1>
                    <p>Make education your dream and it will help you to fullfil your dream.</p>
                    <p>Education takes us to the heigth of succes.</p>
-   
-                   <button class="chooseHavtont">CHOOSE HAVTONT TODAY</button>
+                    <div class="chooseHavtont">
+                        <a href="form.html" class="chooseHavtont">CHOOSE HAVTONT TODAY</a>
+                    </div>
                 </div>
         <!-- </div> -->
     </section>
@@ -309,7 +310,7 @@
                         <div class="ad-image">
                                 <img src="images/image8.jpeg" alt="" class="image-1">
                             <div class="grid-image">
-                                <img src="images/image1.jpeg" alt="" class="image-2">
+                                <img src="images/image6.jpeg" alt="" class="image-2">
                                 <img src="images/picture1.jpeg" alt="" class="image-3">
                             </div>
                         </div>
@@ -324,7 +325,7 @@
             <div class="footer-container">
                 <div class="footer-content-container">
 
-                    <div class="links">
+                   <div class="links">
                         <h1>HavTont</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi amet eos perspiciatis doloremque neque? Nemo nesciunt eius illo quibusdam aliquid iure repellat! Itaque ipsam velit, sunt reprehenderit ea tempora. Maiores?</p>
 
