--- a/form.html
+++ b/form.html
@@ -22,13 +22,15 @@
             </div>
             <div class="inputfield">
                 <i class="fa-solid fa-envelope"></i>
-                <input type="password" class="mail">
+                <input type="email" class="mail">
             </div>
             <div class="inputfield">
                 <i class="fa-solid fa-lock"></i>
-                <input type="text" class="password">
+                <input type="password" class="password">
             </div>
         </form>
+
+        <div class="precovery">Forgotten password? <a href="#">Click here</a></div>
     </div>
 </body>
 </html>
