--- a/form.html
+++ b/form.html
@@ -31,6 +31,11 @@
         </form>
 
         <div class="precovery">Forgotten password? <a href="#">Click here</a></div>
+
+        <div class="createacc">
+            <button class="signup">Sign up</button>
+            <button class="signin">Sign in</button>
+        </div>
     </div>
 </body>
 </html>
