--- a/form.html
+++ b/form.html
@@ -13,28 +13,31 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sign up</h1>
-
-        <form action="">
-            <div class="inputfield">
-                <i class="fa-solid fa-user"></i>
-                <input type="text" class="username">
+        <div class="form-box">
+          <h1>Sign up</h1>
+            <form>
+                <div class="formarea">
+                <div class="inputfield">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" class="username">
+                </div>
+                <div class="inputfield">
+                    <i class="fa-solid fa-envelope"></i>
+                    <input type="email" class="mail">
+                </div>
+                <div class="inputfield">
+                    <i class="fa-solid fa-lock"></i>
+                    <input type="password" class="password">
+                </div>
             </div>
-            <div class="inputfield">
-                <i class="fa-solid fa-envelope"></i>
-                <input type="email" class="mail">
-            </div>
-            <div class="inputfield">
-                <i class="fa-solid fa-lock"></i>
-                <input type="password" class="password">
-            </div>
-        </form>
+            </form>
 
-        <div class="precovery">Forgotten password? <a href="#">Click here</a></div>
+            <p class="precovery">Forgotten password? <a href="#">Click here</a></p>
 
-        <div class="createacc">
-            <button class="signup">Sign up</button>
-            <button class="signin">Sign in</button>
+            <div class="createacc">
+                <button class="signup">Sign up</button>
+                <button class="signin">Sign in</button>
+            </div>
         </div>
     </div>
 </body>
