Twenty three commit

--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="form.css">
 
     <title>Document</title>
 </head>
@@ -33,8 +33,6 @@
                 </div>
                 <p class="precovery">Forgotten password? <a href="#">Click here</a></p>
             </div>
-            
-
 
             <div class="createacc">
                 <button type="button" id="signupBtn">Sign up</button>
@@ -43,5 +41,8 @@
         </form>
         </div>
     </div>
+
+
+    <script src="form.js"></script>
 </body>
 </html>
