Twenty-four commit

--- a/Index.html
+++ b/Index.html
@@ -349,8 +349,8 @@
                             <a href="#">News & Blogs</a>
                             <a href="#">Contact</a>
                             <a href="#">Terms & Service</a>
-                            <a href="#">Sign Up</a>
-                            <a href="#">Sign in</a>
+                            <a href="form.html">Sign Up</a>
+                            <a href="form.html">Sign in</a>
                             <a href="#">Testimonial</a>
                             <a href="#">FAQ</a>
                             <a href="#">Privacy & Policy</a>
