Twenty-six commit

--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
 
                 <div class="inputfield">
                     <i class="fa-solid fa-envelope"></i>
-                    <input type="email" class="mail" placeholder="Email">
+                    <input type="email" class="email" placeholder="Email">
                 </div>
 
                 <div class="inputfield">
@@ -43,6 +43,6 @@
     </div>
 
 
-    <script src="js/form.jsw"></script>
+    <script src="js/form.js"></script>
 </body>
 </html>
