--- a/profile.html
+++ b/profile.html
@@ -11,22 +11,89 @@
     <title>Profile</title>
 </head>
 <body>
-    <div class="profile-container">
-        <div class="container">
-            <img src="images/logo.jpg" alt="">
-            <div class="course-list">
-                <a href="">Python</a>
-                <a href="">Data Analyst</a>
-                <a href="">Networking</a>
-                <a href="">Cloud Computing</a>
-                <a href="">AWS</a>
-            </div>
+    <div class="body-container">
 
-            <div class="logOut">
-                <button>Log out<i class="fa-solid fa-right-from-bracket"></i></button>
-                
+        <div class="profile-container">
+            <div class="container">
+                <h1>HavTont</h1>
+                <div class="course-list">
+                    <a href="">Python</a>
+                    <a href="">Data Analyst</a>
+                    <a href="">Networking</a>
+                    <a href="">Cloud Computing</a>
+                    <a href="">AWS</a>
+                    <a href="">Python</a>
+                    <a href="">Java</a>
+                    <a href="">JavaScript</a>
+                    <a href="">Ruby</a>
+                </div>
+
+                <!-- <div class="logOut"> -->
+                    <button>Log out<i class="fa-solid fa-right-from-bracket"></i></button>
+                <!-- </div> -->
             </div>
         </div>
+
+        <div class="article">
+            <div class="article-container">
+
+                <div class="user-dashboard">
+
+                    <div class="profile">
+                        <img src="images/profilepic.jpg" alt="">
+                        <div class="profile-name">
+                            <h3>Chidi Mathaias</h3>
+                            <p>Computer Science</p>
+                        </div>
+                    </div>
+
+                    <div class="profile-board">
+                        <div class="profie-board-2">
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>The Sandman</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                            <div class="dash-board">
+                                <p>Dash Board</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-board">
+                    <div class="right-board-container">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    
     </div>
 </body>
 </html>
