--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="profile.css">
     <title>Profile</title>
@@ -50,36 +50,47 @@
                     <div class="profile-board">
                         <div class="profie-board-2">
                             <div class="dash-board">
+                                <i class="fa-solid fa-clipboard"></i>
                                 <p>Dash Board</p>
                             </div>
                             <div class="dash-board">
-                                <p>The Sandman</p>
+                                <i class="fa-solid fa-user"></i>
+                                <p>Profile</p>
                             </div>
                             <div class="dash-board">
+                                <i class="fa-solid fa-book"></i>
+                                <p>Courses</p>
+                            </div>
+                            <div class="dash-board">
+                                <i class="fa-solid fa-user"></i>
                                 <p>Dash Board</p>
                             </div>
                             <div class="dash-board">
+                                <i class="fa-solid fa-user"></i>
                                 <p>Dash Board</p>
                             </div>
                             <div class="dash-board">
+                                <i class="fa-solid fa-user"></i>
                                 <p>Dash Board</p>
                             </div>
                             <div class="dash-board">
+                                <i class="fa-solid fa-user"></i>
                                 <p>Dash Board</p>
                             </div>
                             <div class="dash-board">
+                                <i class="fa-solid fa-user"></i>
                                 <p>Dash Board</p>
                             </div>
                             <div class="dash-board">
+                                <i class="fa-solid fa-user"></i>
                                 <p>Dash Board</p>
                             </div>
                             <div class="dash-board">
+                                <i class="fa-solid fa-user"></i>
                                 <p>Dash Board</p>
                             </div>
                             <div class="dash-board">
-                                <p>Dash Board</p>
-                            </div>
-                            <div class="dash-board">
+                                <i class="fa-solid fa-user"></i>
                                 <p>Dash Board</p>
                             </div>
                         </div>
