--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
             <li><a href="#">Courses</a></li>
             <li><a href="#">Admission</a></li>
             <!-- <li><a href="#">Alumni</a></li> -->
-            <li><a href="#">News</a></li>
+            <li><a href="form.html">Signup</a></li>
             <!-- <li><a href="#">Contact</a></li> -->
         </ul>
 
