--- a/form.html
+++ b/form.html
@@ -23,12 +23,12 @@
                     <input type="text" class="username" placeholder="Username">
                 </div>
 
-                <div class="inputfield">
+                <div class="inputfield" id="email">
                     <i class="fa-solid fa-envelope"></i>
                     <input type="email" class="email" placeholder="Email">
                 </div>
 
-                <div class="inputfield">
+                <div class="inputfield" id="password">
                     <i class="fa-solid fa-lock"></i>
                     <input type="password" class="password" placeholder="Password">
                 </div>
@@ -61,7 +61,7 @@
                 </div>
 
                 
-                    <button>Log out<i class="fa-solid fa-right-from-bracket"></i></button>
+                    <button class="Btn">Log out<i class="fa-solid fa-right-from-bracket"></i></button>
                 
             </div>
         </div>
@@ -94,16 +94,16 @@
                                 <p>Courses</p>
                             </div>
                             <div class="dash-board">
-                                <i class="fa-solid fa-user"></i>
-                                <p>Dash Board</p>
+                                <i class="fa-solid fa-code"></i>
+                                <p>Practice Code</p>
                             </div>
                             <div class="dash-board">
-                                <i class="fa-solid fa-user"></i>
-                                <p>Dash Board</p>
+                                <i class="fa-solid fa-ticket"></i>
+                                <p>Get VIP Access</p>
                             </div>
                             <div class="dash-board">
-                                <i class="fa-solid fa-user"></i>
-                                <p>Dash Board</p>
+                                <i class="fa-solid fa-money-bill"></i>
+                                <p>Buy Courses</p>
                             </div>
                             <div class="dash-board">
                                 <i class="fa-solid fa-user"></i>
