--- a/Index.html
+++ b/Index.html
@@ -20,11 +20,11 @@
 
         <ul class="nav-bar">
             <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Courses</a></li>
-            <li><a href="#">Admission</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#our-courses">Courses</a></li>
+            <li><a href="#Admission">Admission</a></li>
             <!-- <li><a href="#">Alumni</a></li> -->
-            <li><a href="form.html">Signup</a></li>
+            <li><a href="form.html" class="sign-up-btn">Signup</a></li>
             <!-- <li><a href="#">Contact</a></li> -->
         </ul>
 
@@ -45,7 +45,7 @@
                    <p>Make education your dream and it will help you to fullfil your dream.</p>
                    <p>Education takes us to the heigth of succes.</p>
                     <div class="chooseHavtont">
-                        <a href="form.html" class="chooseHavtont">CHOOSE HAVTONT TODAY</a>
+                        <button><a href="form.html" class="chooseHavtont">CHOOSE HAVTONT TODAY</a></button>
                     </div>
                 </div>
         <!-- </div> -->
