--- a/form.html
+++ b/form.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/x-icon" href="images/logo.jpg">
 
     <link rel="stylesheet" href="form.css">
     <link rel="stylesheet" href="profile.css">
 
-    <title>Document</title>
+    <title>signUp</title>
 </head>
 <body>
+    <div class="idontknowwhattonamethisclass">
+    <h2 id="errorMessage">Ccreat Account</h2>
     <div class="container">
         <div class="form-box">
-          <h1 id="title">Sign up</h1>
+          <h1 id="title">HavTont | Sign up</h1>
             <form>
                 <div class="formarea">
                 <div class="inputfield" id="nameField">
@@ -36,11 +39,13 @@
             </div>
 
             <div class="createacc">
-                <button type="button" id="signupBtn">Sign up</button>
-                <button type="button" id="signinBtn" class="disable">Sign in</button>
+                <button type="button" id="signUp">Sign up</button>
+                <button type="button" id="signIn" class="disable">Sign in</button>
             </div>
         </form>
         </div>
+
+    </div>
     </div>
 
     <div class="body-container">
@@ -54,7 +59,6 @@
                     <a href="">Networking</a>
                     <a href="">Cloud Computing</a>
                     <a href="">AWS</a>
-                    <a href="">Python</a>
                     <a href="">Java</a>
                     <a href="">JavaScript</a>
                     <a href="">Ruby</a>
@@ -72,7 +76,7 @@
                 <div class="user-dashboard">
 
                     <div class="profile">
-                        <img src="images/profilepic.jpg" alt="">
+                        <img src="images/meonly.jpg" alt="">
                         <div class="profile-name">
                             <h3>Chidi Mathaias</h3>
                             <p>Computer Science</p>
@@ -106,25 +110,22 @@
                                 <p>Buy Courses</p>
                             </div>
                             <div class="dash-board">
-                                <i class="fa-solid fa-user"></i>
-                                <p>Dash Board</p>
+                                <i class="fa-solid fa-square-root-variable"></i>
+                                <p>Mathematics</p>
                             </div>
                             <div class="dash-board">
-                                <i class="fa-solid fa-user"></i>
-                                <p>Dash Board</p>
+                                <i class="fa-solid fa-diagram-project"></i>
+                                <p>Data Structure</p>
                             </div>
                             <div class="dash-board">
-                                <i class="fa-solid fa-user"></i>
-                                <p>Dash Board</p>
+                                <i class="fa-solid fa-sitemap"></i>
+                                <p>Algorithms</p>
                             </div>
                             <div class="dash-board">
-                                <i class="fa-solid fa-user"></i>
-                                <p>Dash Board</p>
+                                <i class="fa-sharp fa-solid fa-gears"></i>
+                                <p>Settings</p>
                             </div>
-                            <div class="dash-board">
-                                <i class="fa-solid fa-user"></i>
-                                <p>Dash Board</p>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
